--- a/app/views/competitions/score/competition_results/index.html.haml
+++ b/app/views/competitions/score/competition_results/index.html.haml
@@ -5,14 +5,13 @@
     - @competition.score_competition_results.sort.each do |result|
       = card(result.name, class: 'mb-3') do |card|
         - card.body do
-
           = render('index_table', resource_class:, competition_result: result)
         - if can?(:create, resource_class.new(competition: @competition))
           = card.primary_actions do |actions|
             - actions.link_to t('a.edit'), { action: :edit, id: result.id }, end_icon: :edit
 
           = card.actions do |actions|
-            - actions.link_to "Urkunden", { action: :edit, id: result.id }, end_icon: :file_certificate
+            - actions.link_to 'Urkunden', { action: :edit, id: result.id }, end_icon: :file_certificate
   .col-md-4
     = card(t('a.actions'), class: 'mb-3') do |card|
       - card.primary_actions do |actions|
