--- a/app/views/competitions/score/list_factories/_finish.haml
+++ b/app/views/competitions/score/list_factories/_finish.haml
@@ -11,7 +11,7 @@
 
 = f.input :hidden, hint: 'Manchmal ist es besser, die Startliste zuerst zu verstecken. Es kann dann zum Beispiel kontrolliert werden, ob die Reihenfolge stimmt.'
 
-- if @list_factory.discipline.key == "la"
+- if @list_factory.discipline.key == 'la'
   = f.input :separate_target_times, hint: 'Die Zeiten für das linke und rechte Ziel werden einzelnd erfasst. Die langsamere Zeit wird zur Wertungszeit.'
 = f.input :show_best_of_run, hint: 'Zeige den Laufbesten hervorgehoben an, um z.B. schneller über das Schläuchemessen zu entscheiden.'
 
