--- a/app/views/competitions/score/results/_form.html.haml
+++ b/app/views/competitions/score/results/_form.html.haml
@@ -1,9 +1,9 @@
 - card.body do
-  - if params[:form] == "series_assessments"
-    = hidden_field_tag :form, "series_assessments"
+  - if params[:form] == 'series_assessments'
+    = hidden_field_tag :form, 'series_assessments'
     = f.association :series_assessments, as: :check_boxes, collection: @result.possible_series_assessments, label_method: ->(assessment) { assessment.score_result_label }
-  - elsif params[:form] == "tags"
-    = hidden_field_tag :form, "tags"
+  - elsif params[:form] == 'tags'
+    = hidden_field_tag :form, 'tags'
     %fieldset.group
       %legend Kennzeichnungen
     
