--- a/app/views/devise/confirmations/new.html.haml
+++ b/app/views/devise/confirmations/new.html.haml
@@ -10,6 +10,5 @@
         - c.footer do
           = f.primary_button :submit, 'Link zusenden'
   .col-md-4
-    = card('Hinweise') do |c|
-      - c.body do
-        Wenn du die E-Mail nicht findest, schaue bitte auch in deinem Spam-Verzeichnis nach.
+    = card_body do
+      Wenn du die E-Mail nicht findest, schaue bitte auch in deinem Spam-Verzeichnis nach.
