--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -13,6 +13,5 @@
         - c.footer do
           = f.primary_button :submit, 'Passwort ändern'
   .col-md-4
-    = card('Hinweise') do |c|
-      - c.body do
-        Hier kannst du dir ein neues Passwort geben. Bitte nutze sichere Passwörter und speichere Sie dir im Zweifel ab. Schlecht gespeichert ist besser, als leicht zu erraten.
+    = card_body do
+      Hier kannst du dir ein neues Passwort geben. Bitte nutze sichere Passwörter und speichere Sie dir im Zweifel ab. Schlecht gespeichert ist besser, als leicht zu erraten.
