--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -9,6 +9,5 @@
         - c.footer do
           = f.primary_button :submit, 'Link zum Zurücksetzen zusenden'
   .col-md-4
-    = card('Hinweise') do |c|
-      - c.body do
-        Wenn du dein Paswort für diese Seite vergessen hast, kannst du dir einen Link zum Zurücksetzen zusenden lassen. Wenn du die E-Mail nicht findest, schaue bitte auch in deinem Spam-Verzeichnis nach.
+    = card_body do
+      Wenn du dein Paswort für diese Seite vergessen hast, kannst du dir einen Link zum Zurücksetzen zusenden lassen. Wenn du die E-Mail nicht findest, schaue bitte auch in deinem Spam-Verzeichnis nach.
