--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -4,6 +4,5 @@
   .col-md-8
     = render('form')
   .col-md-4
-    = card('Hinweise') do |c|
-      - c.body do
-        Hier kannst du dir ein Nutzerkonto registrieren. Bitte nutze sichere Passwörter und speichere Sie dir im Zweifel ab. Schlecht gespeichert ist besser, als leicht zu erraten. Im Anschluss musst du deine E-Mail-Adresse bestätigen.
+    = card_body do
+      Hier kannst du dir ein Nutzerkonto registrieren. Bitte nutze <b>sichere Passwörter</b> und speichere Sie dir im Zweifel ab. Schlecht gespeichert ist besser, als leicht zu erraten. Im Anschluss musst du deine E-Mail-Adresse bestätigen.
