--- a/app/views/competitions/deletions/new.html.haml
+++ b/app/views/competitions/deletions/new.html.haml
@@ -1,19 +1,13 @@
-= page_title @competition.name
+= render 'competitions/header', competition: @competition, resource_class: nil
 
 .row
-  .col-md-8.mb-2
-    .card
-      .card-header
-        = page_title(@competition.name, class: 'display-3')
-        %p.lead #{l @competition.date} - #{@competition.locality}
-      .card-body.text-bg-warning
-        Du willst diesen Wettkampf löschen. Das heißt, dass zugeordneten Anmeldungen, Startlisten und Ergebnisse auch gelöscht werden. Bist du dir sicher?
-      .card-footer
-        = simple_form_for(@deletion, url: competition_deletion_path) do |f|
-          = f.error_notification
-
-          .form-inputs
+  .col-md-8
+    = simple_form_for(@deletion, url: competition_deletion_path) do |f|
+      = card('Wettkampf löschen') do |c|
+        - c.direct do
+          .card-body.text-bg-warning
+            Du willst diesen Wettkampf löschen. Das heißt, dass zugeordneten Anmeldungen, Startlisten und Ergebnisse auch gelöscht werden. Bist du dir sicher?
             = f.input :confirm, autofocus: true, as: :boolean, label: 'Ich will alle gesammelten Daten zu diesem Wettkampf löschen.'
-          .btn-toolbar.mt-3
-            = f.button :submit, 'Löschen', class: 'btn-danger'
-            = link_to 'Abbrechen', competition_show_path, class: 'btn btn-light'
+        - c.footer do
+          = f.button :submit, 'Löschen', class: 'btn-danger'
+          = link_to 'Abbrechen', competition_show_path, class: 'btn btn-light'
