--- a/app/views/competitions/score/results/show.html.haml
+++ b/app/views/competitions/score/results/show.html.haml
@@ -12,9 +12,9 @@
         - card.body do
           .d-grid.gap-2
             = btn_link_to 'Bearbeiten', action: :edit
-            = btn_link_to 'Cup-Serie-Zugehörigkeit', action: :edit, form: "series_assessments"
+            = btn_link_to 'Cup-Serie-Zugehörigkeit', action: :edit, form: 'series_assessments'
             - if @result.band.team_tags.present? || @result.band.person_tags.present?
-              = btn_link_to 'Kennzeichungen', action: :edit, form: "tags"
+              = btn_link_to 'Kennzeichungen', action: :edit, form: 'tags'
             = btn_link_to 'Löschen', { action: :destroy }, method: :delete, data: { confirm: 'Ergebnisliste wirklich löschen? Die zugehörigen Startlisten werden verändert!' }
         - if can?(:edit, @result) && Certificates::Template.exists?
           = btn_link_to 'Urkunden', new_competition_certificates_list_path(score_result_id: @result.id)
