--- a/app/views/competitions/series/rounds/show.html.haml
+++ b/app/views/competitions/series/rounds/show.html.haml
@@ -1,4 +1,4 @@
-= render 'competitions/header', competition: @competition, sub: "Serien", resource_class: Series::Round
+= render 'competitions/header', competition: @competition, sub: 'Serien', resource_class: Series::Round
 
 .row.g-4
   .col-md-6
@@ -16,7 +16,7 @@
                 %td= cup.competition_date
   - if @person_assessments.present?
     .col-md-6
-      = card("Einzelwertungen") do |card|
+      = card('Einzelwertungen') do |card|
         - card.direct do
           %table.table
             %thead
@@ -31,12 +31,12 @@
                     = discipline_image(row.discipline.key)
                     = row.name
                 %td= row.participations.pluck(:person_id).uniq.count
-                %td= link_to("Ansehen", controller: 'series/assessments', action: :show, id: row)
+                %td= link_to('Ansehen', controller: 'series/assessments', action: :show, id: row)
 
 - if @team_assessments_exists
   - %i[female male].each do |gender|
     - next unless @round.team_assessment_rows(@competition, gender).present?
-    
+
     = card("Mannschaftswertung #{t("gender.#{gender}")}") do |card|
       - card.direct do
         %table.table
