--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -13,7 +13,6 @@
         - c.footer do
           = f.primary_button :submit
   .col-md-4
-    .card
-      .card-body
-        %h4 Benutzerkonto entfernen
-        = link_to 'Jetzt löschen', registration_path(resource_name), data: { turbo_confirm: 'Benutzerkonto wirklich entfernen?', 'turbo-method': :delete }, class: 'btn btn-danger btn-sm'
+    = card do
+      %h4 Benutzerkonto entfernen
+      = link_to 'Jetzt löschen', registration_path(resource_name), data: { turbo_confirm: 'Benutzerkonto wirklich entfernen?', 'turbo-method': :delete }, class: 'btn btn-danger btn-sm'
