--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -21,7 +21,6 @@
             </tr>
             <tr class="header">
                <td style="font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 13px; line-height: 1.6; color: #5c5c5c; padding: 25px 0; font-size: 18px; text-align: left;" align="left">
-
                </td>
             </tr>
             <tr>
@@ -30,11 +29,12 @@
                      <tbody>
                         <tr>
                            <td class="wrapper-cell" style="overflow: hidden; padding: 18px 25px;" align="left" bgcolor="#fff">
-                              <img src="asdf" style="height: 50px; width: 307px; margin: 0; border: 0;" width="307" height="50">
+                              <img src="<%= attachments['logo.png'].url %>" style="height: 108px; width: 200px; margin: 0; border: 0; margin-right: 20px" width="200" height="108" align="left">
+                              <h2 style="line-height: 108px; margin: 0; color: #c84b47;">feusport.de</h2>
                            </td>
                         </tr>
                         <tr>
-                           <td style="overflow: hidden; padding: 0; height: 3px;" align="left" bgcolor="#6894c8" height="3">
+                           <td style="overflow: hidden; padding: 0; height: 3px;" align="left" bgcolor="#c84b47" height="3">
                            </td>
                         </tr>
                         <tr>
@@ -50,7 +50,7 @@
                <td style="font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 13px; line-height: 1.6; color: #5c5c5c; padding: 25px 0;">
                   <div>
                     <p style="color: #5c5c5c;">
-                     <%= link_to("feusport.de", root_url, style: 'color: #4375b0 !important;font-weight: bold;') %>
+                     <%= link_to("feusport.de", root_url, style: 'color: #c84b47 !important;font-weight: bold;') %>
                      <br/>
                      feusport.de - Verwaltung von Feuerwehrsportwettkämpfen
                      <br/>
