--- a/spec/fixtures/views/CompetitionMailer_send_to_receiver_renders_the_headers_and_body/view.html
+++ b/spec/fixtures/views/CompetitionMailer_send_to_receiver_renders_the_headers_and_body/view.html
@@ -29,7 +29,7 @@
                      <tbody>
                         <tr>
                            <td class="wrapper-cell" style="overflow: hidden; padding: 18px 25px;" align="left" bgcolor="#fff">
-                              <img src="cid:65dfbf160_431ac203081527@georf-t490.mail" style="height: 108px; width: 200px; margin: 0; border: 0; margin-right: 20px" width="200" height="108" align="left">
+                              <img src="cid:CID.mail" style="height: 108px; width: 200px; margin: 0; border: 0; margin-right: 20px" width="200" height="108" align="left">
                               <h2 style="line-height: 108px; margin: 0; color: #c84b47;">feusport.de</h2>
                            </td>
                         </tr>
