--- a/spec/fixtures/views/Discipline_disciplines_managements_uses_CRUD-new-error/view.html
+++ b/spec/fixtures/views/Discipline_disciplines_managements_uses_CRUD-new-error/view.html
@@ -2,18 +2,18 @@
 <html>
 <head>
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
-<title>Disziplin hinzufügen - MV-Cup - 29.02.2024 - Feuerwehrsport</title>
+<title>MV-Cup - Feuerwehrsport</title>
 <meta content='width=device-width,initial-scale=1' name='viewport'>
 
 
 <link rel="stylesheet" href="/assets/application.css" data-turbo-track="reload" />
 <script src="/assets/application.js" data-turbo-track="reload" defer="defer"></script>
 </head>
-<body class='bg-light'>
-<nav class='navbar navbar-expand-lg bg-secondary-subtle shadow-sm'>
+<body>
+<nav class='navbar navbar-expand-lg navbar-dark bg-accent1'>
 <div class='container'>
 <a class='navbar-brand' href='/' title='Startseite'>
-<img src="/assets/logo.png" />
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 118.768 63.584"><path style="opacity:1;fill-opacity:1;stroke:none;stroke-width:0;stroke-linecap:square;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1;paint-order:normal" d="M300.963 438.191V676.51h134.892V438.19Zm37.654 10.72c1.208 0 10.278 3.737 15.729 6.482 17.06 8.588 31.878 22.142 36.004 32.93 3.755 9.82 1.252 20.302-6.998 29.306-2.158 2.354-8.192 8.023-13.41 12.598-18.208 15.96-23.791 25.714-23.717 41.43.039 8.242 1.67 14.101 6.08 21.818 1.529 2.676 2.596 4.846 2.37 4.822-2.249-.243-10.457-4.302-15.163-7.498-4.746-3.223-13.006-12.052-15.87-16.961-6.453-11.065-7.742-25.648-3.484-39.436.68-2.203 3.246-8.566 5.7-14.14 2.453-5.574 5.346-12.619 6.431-15.655l1.973-5.52 1.629 3.009c2.447 4.515 4.366 11.08 4.802 16.435l.389 4.782 3.455-3.456c3.909-3.907 6.364-8.514 8.293-15.566 1.93-7.054 1.89-20.303-.082-27.754-2.483-9.38-8.157-20.727-12.793-25.586-1.07-1.122-1.672-2.04-1.338-2.04zm67.14 54.777c1.084.018 8.336 10.533 11.32 16.484 5.179 10.332 6.158 14.695 6.21 27.627.039 9.514-.115 11.182-1.426 15.355-4.94 15.731-16.354 28.117-30.873 33.502-7.5 2.782-7.164 2.845-8.529-1.625-1.597-5.231-1.613-15.565-.027-20.863 1.533-5.13 6.464-14.768 11.802-23.07 8.425-13.103 11.27-19.93 12.493-29.98.553-4.55.493-6.622-.323-11.35-.549-3.182-.878-5.903-.732-6.05a.114.114 0 0 1 .086-.03z" transform="matrix(.26458 0 0 .26458 -38.091 -115.674)"/><path style="opacity:1;fill-opacity:1;stroke:none;stroke-width:.09827963;stroke-linejoin:bevel;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" d="M38.356 134.406h35.688v44.569H38.356zM120.906 134.406h35.688v44.569h-35.688z" transform="translate(-38.091 -115.674)"/></svg>
 </a>
 <button aria-controls='navbar-supported-content' aria-expanded='false' aria-label='Menü anzeigen' class='navbar-toggler' data-bs-target='#navbar-supported-content' data-bs-toggle='collapse' type='button'>
 <span class='navbar-toggler-icon'></span>
@@ -21,36 +21,24 @@
 <div class='collapse navbar-collapse' id='navbar-supported-content'>
 <ul class='navbar-nav me-auto mb-2 mb-lg-0'>
 <li class='nav-item'>
-<a class="nav-link active" aria-current="page" href="/2024/mv-cup">MV-Cup
-<div class='small'>29.02.2024 - Rostock</div>
-</a></li>
-<li class='nav-item'>
-<a class="nav-link" href="/2024/mv-cup/teams">Mannschaften</a>
+<a class="nav-link" href="/competitions/creations/new">Wettkampf anlegen</a>
 </li>
 <li class='nav-item'>
-<a class="nav-link" href="/2024/mv-cup/people">Wettkämpfer</a>
+<a class="nav-link" href="/info">Über feusport.de</a>
 </li>
-<li class='nav-item'>
-<a class="nav-link" href="/2024/mv-cup/score_lists">Startlisten</a>
-</li>
-</ul>
-<ul class='navbar-nav me-end mb-2 mb-lg-0'>
 <li class='nav-item dropdown'>
-<a aria-expanded='false' class='nav-link dropdown-toggle' data-bs-toggle='dropdown' href='#' id='navbar-dropdown-menu-link' role='button'>
-<div class='far fa-wrench'></div>
+<a aria-expanded='false' class='nav-link dropdown-toggle' data-bs-toggle='dropdown' href='#' role='button'>
+Benutzer
 </a>
-<ul aria-labelledby='navbar-dropdown-menu-link' class='dropdown-menu'>
+<ul class='dropdown-menu'>
 <li>
-<a class="dropdown-item active" aria-current="page" href="/2024/mv-cup/disciplines">Disziplinen</a>
+<a class="dropdown-item" href="/users/edit">Bearbeiten</a>
 </li>
 <li>
-<a class="dropdown-item" href="/2024/mv-cup/bands">Wertungsgruppen</a>
+<hr class='dropdown-divider'>
 </li>
 <li>
-<a class="dropdown-item" href="/2024/mv-cup/assessments">Wertungen</a>
-</li>
-<li>
-<a class="dropdown-item" href="/2024/mv-cup/certificates/templates">Urkundenvorlagen</a>
+<a data-turbo-method="delete" class="dropdown-item" href="/users/sign_out">Abmelden</a>
 </li>
 </ul>
 </li>
@@ -59,15 +47,88 @@
 
 </div>
 </nav>
-<div class='container mt-3'>
+<header class='page-header'>
+<div class='container'>
+<h1>MV-Cup</h1>
+<p class='lead m-0 ms-1'>29.02.2024 - Rostock</p>
+<p class='lead m-0 ms-1'>Disziplin hinzufügen</p>
+
+</div>
+</header>
+<header class='page-tabs'>
+<div class='container'>
+<div class='nav nav-pills nav-tabs-responsive'>
+<div class='nav-item'>
+<a class="nav-link" href="/2024/mv-cup">Informationen
+</a>
+</div>
+<div class='nav-item'>
+<a class="nav-link" href="/2024/mv-cup/teams">Mannschaften
+</a>
+</div>
+<div class='nav-item'>
+<a class="nav-link" href="/2024/mv-cup/people">Wettkämpfer
+</a>
+</div>
+<div class='nav-item'>
+<a class="nav-link" href="/2024/mv-cup/score/lists">Startlisten
+</a>
+</div>
+<div class='nav-item'>
+<a class="nav-link" href="/2024/mv-cup/score/results">Ergebnisse
+</a>
+</div>
+<div class='dropdown nav-item'>
+<a aria-expanded='false' class='nav-link dropdown-toggle' data-bs-toggle='dropdown' href='#' id='navbar-dropdown-menu-link' role='button'>
+Erweitert
+</a>
+<ul aria-labelledby='navbar-dropdown-menu-link' class='dropdown-menu'>
+<div class='active'>
+<a class="dropdown-item active" aria-current="page" href="/2024/mv-cup/disciplines">Disziplinen
+</a>
+</div>
+<div class=''>
+<a class="dropdown-item" href="/2024/mv-cup/bands">Wertungsgruppen
+</a>
+</div>
+<div class=''>
+<a class="dropdown-item" href="/2024/mv-cup/assessments">Wertungen
+</a>
+</div>
+<div class=''>
+<a class="dropdown-item" href="/2024/mv-cup/score/competition_results">Gesamtwertungen
+</a>
+</div>
+<div class=''>
+<a class="dropdown-item" href="/2024/mv-cup/certificates/templates">Urkundenvorlagen
+</a>
+</div>
+<div class=''>
+<a class="dropdown-item" href="/2024/mv-cup/accesses">Zugänge
+</a>
+</div>
+
+</ul>
+</div>
+
+</div>
+
+</div>
+</header>
+<div class='container mt-4'>
 <div class='alert-flash'>
 <div class='alert alert-danger'>Bitte überprüfen Sie folgende Fehler:</div>
 </div>
 </div>
-<div class='mt-3 container'><div class='row'>
+<div class='pb-4 mt-4 container'>
+<div class='row'>
 <div class='col-md-8'>
 <form class="simple_form new_discipline" id="new_discipline" novalidate="novalidate" action="/2024/mv-cup/disciplines" accept-charset="UTF-8" method="post"><div class='card'>
-<div class='card-header'>Disziplin hinzufügen</div>
+<div class='card-header p-0'>
+<div class='d-flex justify-content-between'>
+<h4 class='m-0 py-2 ps-3'>Disziplin hinzufügen</h4>
+</div>
+</div>
 <div class='card-body'>
 <fieldset class="form-group radio_buttons required discipline_key form-group-invalid"><div class="col-form-label pt-0">Symbol <abbr title="required">*</abbr></div><input type="hidden" name="discipline[key]" value="" autocomplete="off" /><div class="form-check"><input class="form-check-input is-invalid radio_buttons required" aria-invalid="true" type="radio" value="la" name="discipline[key]" id="discipline_key_la" /><label class="form-check-label collection_radio_buttons" for="discipline_key_la"><img src="/assets/disciplines/la.svg" width="40" height="40" /></label></div><div class="form-check"><input class="form-check-input is-invalid radio_buttons required" aria-invalid="true" type="radio" value="hl" name="discipline[key]" id="discipline_key_hl" /><label class="form-check-label collection_radio_buttons" for="discipline_key_hl"><img src="/assets/disciplines/hl.svg" width="40" height="40" /></label></div><div class="form-check"><input class="form-check-input is-invalid radio_buttons required" aria-invalid="true" type="radio" value="hb" name="discipline[key]" id="discipline_key_hb" /><label class="form-check-label collection_radio_buttons" for="discipline_key_hb"><img src="/assets/disciplines/hb.svg" width="40" height="40" /></label></div><div class="form-check"><input class="form-check-input is-invalid radio_buttons required" aria-invalid="true" type="radio" value="zk" name="discipline[key]" id="discipline_key_zk" /><label class="form-check-label collection_radio_buttons" for="discipline_key_zk"><img src="/assets/disciplines/zk.svg" width="40" height="40" /></label></div><div class="form-check"><input class="form-check-input is-invalid radio_buttons required" aria-invalid="true" type="radio" value="gs" name="discipline[key]" id="discipline_key_gs" /><label class="form-check-label collection_radio_buttons" for="discipline_key_gs"><img src="/assets/disciplines/gs.svg" width="40" height="40" /></label></div><div class="form-check"><input class="form-check-input is-invalid radio_buttons required" aria-invalid="true" type="radio" value="fs" name="discipline[key]" id="discipline_key_fs" /><label class="form-check-label collection_radio_buttons" for="discipline_key_fs"><img src="/assets/disciplines/fs.svg" width="40" height="40" /></label></div><div class="form-check"><input class="form-check-input is-invalid radio_buttons required" aria-invalid="true" type="radio" value="other" name="discipline[key]" id="discipline_key_other" /><label class="form-check-label collection_radio_buttons" for="discipline_key_other"><img src="/assets/disciplines/other.svg" width="40" height="40" /></label></div><div class="invalid-feedback d-block">Symbol muss ausgefüllt werden</div></fieldset>
 <div class="form-group my-2 string required discipline_name form-group-valid"><label class="control-label string required" for="discipline_name">Name <abbr title="required">*</abbr></label><input class="form-control string required" type="text" value="Foo" name="discipline[name]" id="discipline_name" /><small class="form-text text-muted">z.B.: Löschangriff nass</small></div>
@@ -76,11 +137,43 @@
 <fieldset class="form-group boolean optional discipline_like_fire_relay"><div class="form-check"><input name="discipline[like_fire_relay]" type="hidden" value="0" autocomplete="off" /><input class="form-check-input boolean optional" type="checkbox" value="1" name="discipline[like_fire_relay]" id="discipline_like_fire_relay" /><label class="form-check-label boolean optional" for="discipline_like_fire_relay">Wie Feuerwehrstafette (pro Mannschaft 2 Staffeln A/B)</label><small class="form-text text-muted">Dies sollte bei 4x100m-Feuerwehrstafette ausgewählt werden</small></div></fieldset>
 
 </div>
-<div class='card-footer d-flex justify-content-end'><button name="button" type="submit" class="btn btn-primary" data-disable-with="Bitte warten...">Disziplin erstellen</button>
-<a class="btn btn-light" href="/2024/mv-cup/disciplines">Abbrechen</a>
+<div class='card-footer'>
+<div class='d-flex justify-content-between align-items-start'>
+<div><button name="button" type="submit" class="btn btn-primary" data-disable-with="Bitte warten...">Disziplin erstellen</button>
+<a class="btn btn-secondary" href="/2024/mv-cup/disciplines">Abbrechen</a>
+</div>
+</div>
 </div>
 </div>
 </form></div>
+<div class='col-md-4'>
+<div class='card'>
+<div class='card-header p-0'>
+<div class='d-flex justify-content-between'>
+<h4 class='m-0 py-2 ps-3'>Vorlage hinzufügen</h4>
+</div>
+</div>
+<div class='card-body'>
+<div class='d-grid gap-2'>
+<form class="button_to" method="post" action="/2024/mv-cup/disciplines"><button class="btn btn-light btn-sm" type="submit"><img src="/assets/disciplines/la.svg" width="20" height="20" />
+Löschangriff nass
+</button><input type="hidden" name="discipline[key]" value="la" autocomplete="off" /><input type="hidden" name="discipline[like_fire_relay]" value="false" autocomplete="off" /><input type="hidden" name="discipline[name]" value="Löschangriff nass" autocomplete="off" /><input type="hidden" name="discipline[short_name]" value="LA" autocomplete="off" /><input type="hidden" name="discipline[single_discipline]" value="false" autocomplete="off" /></form><form class="button_to" method="post" action="/2024/mv-cup/disciplines"><button class="btn btn-light btn-sm" type="submit"><img src="/assets/disciplines/hl.svg" width="20" height="20" />
+Hakenleitersteigen
+</button><input type="hidden" name="discipline[key]" value="hl" autocomplete="off" /><input type="hidden" name="discipline[like_fire_relay]" value="false" autocomplete="off" /><input type="hidden" name="discipline[name]" value="Hakenleitersteigen" autocomplete="off" /><input type="hidden" name="discipline[short_name]" value="HL" autocomplete="off" /><input type="hidden" name="discipline[single_discipline]" value="true" autocomplete="off" /></form><form class="button_to" method="post" action="/2024/mv-cup/disciplines"><button class="btn btn-light btn-sm" type="submit"><img src="/assets/disciplines/hb.svg" width="20" height="20" />
+100m-Hindernisbahn
+</button><input type="hidden" name="discipline[key]" value="hb" autocomplete="off" /><input type="hidden" name="discipline[like_fire_relay]" value="false" autocomplete="off" /><input type="hidden" name="discipline[name]" value="100m-Hindernisbahn" autocomplete="off" /><input type="hidden" name="discipline[short_name]" value="HB" autocomplete="off" /><input type="hidden" name="discipline[single_discipline]" value="true" autocomplete="off" /></form><form class="button_to" method="post" action="/2024/mv-cup/disciplines"><button class="btn btn-light btn-sm" type="submit"><img src="/assets/disciplines/zk.svg" width="20" height="20" />
+Zweikampf
+</button><input type="hidden" name="discipline[key]" value="zk" autocomplete="off" /><input type="hidden" name="discipline[like_fire_relay]" value="false" autocomplete="off" /><input type="hidden" name="discipline[name]" value="Zweikampf" autocomplete="off" /><input type="hidden" name="discipline[short_name]" value="ZK" autocomplete="off" /><input type="hidden" name="discipline[single_discipline]" value="true" autocomplete="off" /></form><form class="button_to" method="post" action="/2024/mv-cup/disciplines"><button class="btn btn-light btn-sm" type="submit"><img src="/assets/disciplines/gs.svg" width="20" height="20" />
+Gruppenstafette
+</button><input type="hidden" name="discipline[key]" value="gs" autocomplete="off" /><input type="hidden" name="discipline[like_fire_relay]" value="false" autocomplete="off" /><input type="hidden" name="discipline[name]" value="Gruppenstafette" autocomplete="off" /><input type="hidden" name="discipline[short_name]" value="GS" autocomplete="off" /><input type="hidden" name="discipline[single_discipline]" value="false" autocomplete="off" /></form><form class="button_to" method="post" action="/2024/mv-cup/disciplines"><button class="btn btn-light btn-sm" type="submit"><img src="/assets/disciplines/fs.svg" width="20" height="20" />
+4x100m-Feuerwehrstafette
+</button><input type="hidden" name="discipline[key]" value="fs" autocomplete="off" /><input type="hidden" name="discipline[like_fire_relay]" value="true" autocomplete="off" /><input type="hidden" name="discipline[name]" value="4x100m-Feuerwehrstafette" autocomplete="off" /><input type="hidden" name="discipline[short_name]" value="FS" autocomplete="off" /><input type="hidden" name="discipline[single_discipline]" value="false" autocomplete="off" /></form></div>
+
+</div>
+</div>
+
+
+</div>
 </div>
 </div>
 </body>
