--- a/app/views/competitions/_header.html.haml
+++ b/app/views/competitions/_header.html.haml
@@ -15,7 +15,7 @@
 
       = tabs.link_to Score::Result, competition_score_results_path
 
-    - if @competition.score_competition_results.where(hidden: false).exists?
+    - if @competition.score_competition_results.exists?(hidden: false)
       = tabs.link_to Score::CompetitionResult, competition_score_competition_results_path
     - if Score::ResultSeriesAssessment.exists_for?(@competition)
       = tabs.link_to Series::Round, competition_series_rounds_path
