--- a/app/views/competitions/series/rounds/show.html.haml
+++ b/app/views/competitions/series/rounds/show.html.haml
@@ -35,7 +35,7 @@
 
 - if @team_assessments_exists
   - %i[female male].each do |gender|
-    - next unless @round.team_assessment_rows(@competition, gender).present?
+    - next if @round.team_assessment_rows(@competition, gender).blank?
 
     = card("Mannschaftswertung #{t("gender.#{gender}")}") do |card|
       - card.direct do
@@ -56,4 +56,3 @@
               %td= row.count
               %td= row.best_result_entry
               %td= row.points
-
