--- a/spec/fixtures/views/Assessment_assessments_managements_uses_CRUD-index-two-entries/view.html
+++ b/spec/fixtures/views/Assessment_assessments_managements_uses_CRUD-index-two-entries/view.html
@@ -148,10 +148,10 @@ Gruppenstafette
 </td>
 </tr>
 <tr>
-<td>Löschangriff nass - Frauen</td>
+<td>Löschangriff Nass - Frauen</td>
 <td>
 <img src="/assets/disciplines/la.svg" width="20" height="20" />
-Löschangriff nass
+Löschangriff Nass
 </td>
 <td>Frauen</td>
 <td class='text-end'>
