--- a/spec/fixtures/views/Assessment_assessments_managements_uses_CRUD-show/view.html
+++ b/spec/fixtures/views/Assessment_assessments_managements_uses_CRUD-show/view.html
@@ -51,7 +51,7 @@ Benutzer
 <div class='container'>
 <h1>MV-Cup</h1>
 <p class='lead m-0 ms-1'>29.02.2024 - Rostock</p>
-<p class='lead m-0 ms-1'>Wertung: Löschangriff nass - Frauen</p>
+<p class='lead m-0 ms-1'>Wertung: Löschangriff Nass - Frauen</p>
 
 </div>
 </header>
@@ -121,17 +121,17 @@ Erweitert
 <div class='card mb-3'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Löschangriff nass - Frauen</h4>
+<h4 class='m-0 py-2 ps-3'>Löschangriff Nass - Frauen</h4>
 </div>
 </div>
 <table class='table'>
 <tr>
 <th>Name</th>
-<td>Löschangriff nass - Frauen</td>
+<td>Löschangriff Nass - Frauen</td>
 </tr>
 <tr>
 <th>Disziplin</th>
-<td>Löschangriff nass</td>
+<td>Löschangriff Nass</td>
 </tr>
 <tr>
 <th>Wertungsgruppe</th>
