--- a/spec/fixtures/views/Discipline_disciplines_managements_uses_CRUD-show/view.html
+++ b/spec/fixtures/views/Discipline_disciplines_managements_uses_CRUD-show/view.html
@@ -51,7 +51,7 @@ Benutzer
 <div class='container'>
 <h1>MV-Cup</h1>
 <p class='lead m-0 ms-1'>29.02.2024 - Rostock</p>
-<p class='lead m-0 ms-1'>Disziplin: Löschangriff nass</p>
+<p class='lead m-0 ms-1'>Disziplin: Löschangriff Nass</p>
 
 </div>
 </header>
