--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -354,3 +354,23 @@ fieldset.group
     width: 6rem
   &.disabled-time-entries
     opacity: 0.3
+
+
+.feusport-modal
+  display: none
+  position: fixed
+  z-index: 1
+  left: 0
+  top: 0
+  width: 100%
+  height: 100%
+  overflow: auto
+  background-color: rgb(0,0,0)
+  background-color: rgba(0,0,0,0.4)
+
+.feusport-modal-content
+  background-color: #fefefe
+  margin: 15% auto
+  padding: 0
+  border: 1px solid #888
+  width: 80%
