--- a/app/views/competitions/certificates/templates/edit_text_fields.html.haml
+++ b/app/views/competitions/certificates/templates/edit_text_fields.html.haml
@@ -11,7 +11,7 @@
           #certificates-template-position{ data: { font_family_regular: @template.font.attached? ? "certificates_template_#{@template.id}_regular" : '', font_family_bold: @template.font2.attached? ? "certificates_template_#{@template.id}_bold" : '', background: @template.image.attached? ? rails_blob_path(@template.image) : '', config: Certificates::TextField::KEY_CONFIG.to_json } }
 
         .col-md-2#position-buttons
-          .btn.btn-default.btn-sm#add-new-field Feld hinzufügen
+          .btn.btn-light.btn-sm#add-new-field Feld hinzufügen
           #field-tables
 
       - @template.text_fields.each do |text_field|
@@ -28,33 +28,34 @@
           = tf.input :color, as: :hidden
           = tf.input :id, as: :hidden
           = tf.input :_destroy, as: :hidden, input_html: { value: tf.object.persisted? ? 'false' : 'true' }
-      -# .new-position-form
-      -#   .modal.fade
-      -#     .modal-header
-      -#       %button.close{ type: :button, data: { dismiss: :modal }, 'aria-hidden' => true } ×
-      -#     .modal-body
-      -#       = simple_form_for Certificates::TextField.new, url: '' do |tf|
-      -#         = box 'Textposition' do |box|
-      -#           = tf.input :key, as: :select, collection: Certificates::TextField::KEY_CONFIG.map { |k, v| ["#{v[:description]} (z.B.: #{v[:example]})", k] }
-      -#           = tf.input :text
-      -#           - box.footer do
-      -#             = tf.primary_button :submit, 'Speichern'
+      .new-positions
+        = f.simple_fields_for(:text_fields, Certificates::TextField.new) do |tf|
+          = tf.input :left, as: :hidden
+          = tf.input :top, as: :hidden
+          = tf.input :width, as: :hidden
+          = tf.input :height, as: :hidden
+          = tf.input :size, as: :hidden
+          = tf.input :key, as: :hidden, input_html: { value: 'template' }
+          = tf.input :align, as: :hidden
+          = tf.input :text, as: :hidden
+          = tf.input :font, as: :hidden
+          = tf.input :color, as: :hidden
+          = tf.input :id, as: :hidden
+          = tf.input :_destroy, as: :hidden, input_html: { value: 'true' }
       - card.footer do
         = f.primary_button :submit
         = f.cancel_button(competition_certificates_templates_path)
 
-.modal{ tabindex: '-1' }
-  .modal-dialog
-    .modal-content
-      .modal-header
-        %h5.modal-title Modal title
-        %button.btn-close{ 'aria-label' => 'Close', 'data-bs-dismiss' => 'modal', type: 'button' }
-      .modal-body
-        %p Modal body text goes here.
-      .modal-footer
-        %button.btn.btn-secondary{ 'data-bs-dismiss' => 'modal', type: 'button' } Close
-        %button.btn.btn-primary{ type: 'button' } Save changes
-
+.feusport-modal#new-positions-form
+  .feusport-modal-content
+    = card_direct('Feld hinzufügen') do
+      = simple_form_for(Certificates::TextField.new, url: '') do |f|
+        .card-body
+          = f.input :key, as: :select, collection: Certificates::TextField::KEY_CONFIG.map { |k, v| ["#{v[:description]} (z.B.: #{v[:example]})", k] }
+          = f.input :text
+        .card-footer
+          = f.primary_button :submit, 'Feld hinzufügen'
+          = f.cancel_button ''
 
 %table.information-table#information-table-template
   %tbody
