--- a/app/views/competitions/certificates/templates/show.html.haml
+++ b/app/views/competitions/certificates/templates/show.html.haml
@@ -49,7 +49,7 @@
           = btn_link_to 'Bearbeiten', action: :edit
           = btn_link_to 'Vorschau als PDF', { format: :pdf }, target: '_blank', rel: 'noopener'
           = btn_link_to 'Vorlage duplizieren', { action: :duplicate }
-          = btn_link_to 'Löschen', { action: :destroy }, method: :delete, data: { confirm: 'Vorlage wirklich löschen?' }
+          = btn_link_to 'Löschen', { action: :destroy }, data: { turbo_confirm: 'Vorlage wirklich löschen?', 'turbo-method': :delete }
 .row
   .col-md-6.mt-3
     = card('Vorschau') do |card|
