--- a/app/views/competitions/score/list_factories/_generator_params.haml
+++ b/app/views/competitions/score/list_factories/_generator_params.haml
@@ -1,8 +1,8 @@
 = f.input :next_step, as: :hidden, input_html: { value: :finish }
 - if :before_list.in? @list_factory.class.generator_params
-  = f.association :before_list, collection: @list_factory.possible_before_lists, selected: @list_factory.default_before_list.try(:id)
+  = f.association :before_list, collection: @list_factory.possible_before_lists, selected: @list_factory.default_before_list&.id
 - if :before_result.in? @list_factory.class.generator_params
-  = f.association :before_result, collection: @list_factory.possible_before_results, selected: @list_factory.default_before_result.try(:id)
+  = f.association :before_result, collection: @list_factory.possible_before_results, selected: @list_factory.default_before_result&.id
 - if :best_count.in? @list_factory.class.generator_params
   = f.input :best_count, input_html: { value: @list_factory.default_best_count }
 - if :track.in? @list_factory.class.generator_params
