--- a/app/views/competitions/score/lists/move.html.haml
+++ b/app/views/competitions/score/lists/move.html.haml
@@ -7,7 +7,7 @@
         %table.table.sorted-table{ data: { track_count: @list.track_count } }
           = render 'list_headline', list: @list, times: false, edit: false
           %tbody
-            - score_list_entries(@list, true) do |entry, run, track, _best_of_run|
+            - score_list_entries(@list, move_modus: true) do |entry, run, track, _best_of_run|
               = render 'list_entry', entry:, run:, track:, list: @list, best_of_run: false, move: true
 
   .col-md-4
